@@ -1,5 +1,10 @@
 2007-10-25  Jb Evain  <jbevain@novell.com>
 
+	* Mono.Tuner/InjectAttributes.cs: inject security attributes
+	defined in the public api.
+
+2007-10-25  Jb Evain  <jbevain@novell.com>
+
 	* Mono.Tuner/InjectAttributes.cs: infrastructure for
 	the attribute injector.
 
